# MVP_Military_basic_rule_finder

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt  run_local_webapp.bat  run_webapp.bat  setup_local_webapp.bat  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: settings.yaml
data/processed/: law_corpus.jsonl
data/sample/: README.md
data_manifests/: public_law_sources.csv  research_references.csv
docs/: 01_research_bibliography.md  02_final_plan.md  03_system_architecture.md  04_evaluation_framework.md  05_future_internal_rule_ingest_plan.md  06_release_review.md  07_web_deployment.md
local/: .env.example  README.md  run_webapp.bat  streamlit_app.py
prompts/: 01_codex_bootstrap_repo.md  02_codex_ingest_public_laws.md  03_codex_expand_to_admin_rules.md  04_codex_redteam_release_check.md
scripts/: _bootstrap.py  build_public_corpus.py  build_sample_corpus.py  download_sources_from_manifest.py  fetch_law_open_api.py  ingest_to_chroma.py  normalize_raw_to_jsonl.py  run_smoke_checks.py  setup_codespaces.sh  start_codespaces_webapp.sh  start_render_webapp.py
src/army_reg_rag/: config.py  export_docx.py
tests/: test_answer_service.py  test_chroma_reset.py  test_config.py  test_export_docx.py  test_gemini_client.py  test_generation_fallback.py  test_lm_studio_client.py  test_public_law_pipeline.py  test_quota.py  test_router.py  test_store.py  test_usage_tracker.py
(+44 files in other folders)
